--- a/public/CSS/admin_style.css
+++ b/public/CSS/admin_style.css
@@ -1,3 +1,4 @@
+/* Style Admin ( CSS ) */
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
 
 :root{
