connect to domain

--- a/public/CSS/admin_style.css
+++ b/public/CSS/admin_style.css
@@ -24,7 +24,7 @@
 }
 
 *::selection{
-   background-color: var(--purple);
+   background-color: #00fff7;
    color:var(--white);
 }
 
@@ -38,7 +38,7 @@
 }
 
 *::-webkit-scrollbar-thumb{
-   background-color: var(--purple);
+   background-color: #00fff7;
 }
 
 html{
@@ -122,7 +122,7 @@ section{
 
 .white-btn,
 .btn{
-   background-color: var(--purple);
+   background-color: #00fff7;
 }
 
 .option-btn{
@@ -169,7 +169,7 @@ section{
 }
 
 .header .flex .logo span{
-   color:var(--purple);
+   color:#00fff7;
 }
 
 .header .flex .navbar a{
@@ -179,7 +179,7 @@ section{
 }
 
 .header .flex .navbar a:hover{
-   color:var(--purple);
+   color:#00fff7;
 }
 
 .header .flex .icons div{
@@ -190,7 +190,7 @@ section{
 }
 
 .header .flex .icons div:hover{
-   color:var(--purple);
+   color:#00fff7;
 }
 
 .header .flex .account-box{
@@ -219,7 +219,7 @@ section{
 }
 
 .header .flex .account-box p span{
-   color:var(--purple);
+   color:#00fff7;
 }
 
 .header .flex .account-box .delete-btn{
@@ -271,7 +271,7 @@ section{
    margin-top: 1.5rem;
    padding:1.5rem;
    background-color: var(--light-bg);
-   color:var(--purple);
+   color:#00fff7;
    font-size: 2rem;
    border-radius: .5rem;
    border:var(--border);
@@ -408,7 +408,7 @@ section{
 }
 
 .orders .box-container .box p span{
-   color:var(--purple);
+   color:#00fff7;
 }
 
 .orders .box-container .box form{
@@ -452,7 +452,7 @@ section{
 }
 
 .users .box-container .box p span{
-   color:var(--purple);
+   color:#00fff7;
 }
 
 .users .box-container .box .delete-btn{
@@ -485,7 +485,7 @@ section{
 }
 
 .messages .box-container .box p span{
-   color:var(--purple);
+   color:#00fff7;
 }
 
 .messages .box-container .box .delete-btn{
